--- a/style.css
+++ b/style.css
@@ -42,24 +42,47 @@ button {
 
 .rock {
     background-color: rgb(0, 179, 255);
+    flex: 1;
 }
 
 .paper {
     background-color: rgb(255, 166, 0);
+    flex: 1;
 }
 
 .scissors {
     background-color: rgb(45, 179, 0);
+    flex: 1;
 }
 
 
 .round-score, .game-score {
-    font-size: 18px;
+    color: red;
+    font-size: 20px;
     font-weight: 700;
 
 }
 
 .game-score {
     color: blue;
+    font-size: 36px;
 }
 
+.game-scores {
+    border-top: solid;
+    border-color: gray;
+    border-width: 1px;
+    padding: 20px 0;
+}
+
+.human-selection, .versus, .computer-selection, .human-score, .computer-score {
+    flex: 1;
+    font-weight: 700;
+}
+
+.refresh-button {
+    background-color: blue;
+    font-size: 12px;
+    padding: 6px 12px;
+    box-shadow: 1px 2px 8px rgb(187, 187, 187);
+}
