--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 main {
@@ -11,7 +14,7 @@ main {
     margin: auto 8px;
     margin-top: 30px;
     background-color: #f6f6f6;
-    box-shadow: 2px 2px #d8d8d8;
+    box-shadow: 2px 2px 8px #d8d8d8;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -29,8 +32,14 @@ h1 {
     display: flex;
     gap: 16px;
     align-items: center;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
     justify-content: center;
+}
+
+.game-answers {
+    margin-right: auto;
+    margin-left: auto;
 }
 
 button {
@@ -69,15 +78,20 @@ button {
 }
 
 .game-scores {
-    border-top: solid;
-    border-color: gray;
-    border-width: 1px;
-    padding: 20px 0;
+    width: 360px;
+    padding: 20px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .human-selection, .versus, .computer-selection, .human-score, .computer-score {
     flex: 1;
     font-weight: 700;
+    text-align: center;
 }
 
 .refresh-button {
