--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -16,6 +15,19 @@ main {
     background-color: #f6f6f6;
     box-shadow: 2px 2px 8px #d8d8d8;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 16px;
+    text-align: center;
+}
+
+.game-scores {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 360px;
+    padding: 10px 20px;
+    margin: auto 8px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -75,17 +87,6 @@ button {
 .game-score {
     color: blue;
     font-size: 36px;
-}
-
-.game-scores {
-    width: 360px;
-    padding: 20px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
 }
 
 .human-selection, .versus, .computer-selection, .human-score, .computer-score {
